Getting build ready for gui